plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.devwuu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	// JSON = 유일한 원본 저장 포맷. jackson-databind + jsr310(날짜) + parameter-names 포함 (ref: data-model.md#2, ADR-1)
	implementation 'org.springframework.boot:spring-boot-starter-json'
	// Thymeleaf: 정적 HTML 생성기 용법(오프라인 실행). starter-web 미포함 (ref: plan.md#ADR-7)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Slack Socket Mode 수신 (ref: plan.md#ADR-2). bolt-socket-mode가 bolt·slack-api-client 추이 포함
	implementation 'com.slack.api:bolt-socket-mode:1.49.0'
	// Socket Mode WebSocket 백엔드. bolt-socket-mode는 WS 클라이언트 구현을 포함하지 않아 별도 필요(기본 Tyrus는 javax.websocket 의존).
	// 단일 jar·무추이인 Java-WebSocket을 골라 Backend.JavaWebSocket으로 구동한다(SlackGateway). ADR-2 필수 런타임.
	implementation 'org.java-websocket:Java-WebSocket:1.6.0'

	// OpenAI 클라이언트 — LlmClient/SearchClient 구현체 뒤에만 존재 (ref: plan.md#ADR-5)
	// raw SDK로 시작. Spring AI 2.0 GA + web search production 지원 시 구현체 내부 교체 재검토 (ADR-5 재검토 트리거)
	implementation 'com.openai:openai-java:4.42.0'

	// 공식 상품 페이지 HTML fetch·상세 이미지 URL 추출 (ref: plan.md#ADR-15, changes/0006-official-page-image-ocr).
	// 정규식 파싱 대신 HTML 파서 — 문제 관측 후 도입(right-sizing). 페이지 fetch·파싱은 이미지 수집기 경계 클래스 안에만 노출(NFR-4).
	implementation 'org.jsoup:jsoup:1.22.2'

	// 카드 HTML → JPG 래스터화 = 헤드리스 Chromium (ref: plan.md#ADR-11, changes/0002-instagram-share-card).
	// flexbox·컬러 이모지·한글 웹폰트를 온전히 렌더하려면 실제 브라우저 엔진이 필요. 순수 Java(openhtmltopdf)는 flexbox 미지원.
	// Chromium 바이너리는 Playwright가 관리(첫 launch 시 다운로드 or `./gradlew installChromium` 사전설치). 렌더 엔진은 CardImageRenderer 뒤에만 노출(NFR-4).
	implementation 'com.microsoft.playwright:playwright:1.49.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-Xlint:deprecation')
}

// 기본 test는 실 Chromium을 기동하는 무거운 스모크(@Tag("chromium"))를 제외한다 —
// 비용·불안정성·바이너리 다운로드 의존을 기본 실행에서 차단(백엔드 CLAUDE.md §5.2). 태깅 컨벤션 신설.
tasks.named('test') {
	useJUnitPlatform {
		// 실 외부 호출 스모크는 기본 실행에서 제외 — 무거운 Chromium(ADR-11), 비용 발생 OpenAI 호출.
		excludeTags 'chromium', 'openai'
	}
}

// 실 OpenAI 호출 스모크만 온디맨드: `./gradlew openaiTest` (.env.local의 OPENAI_API_KEY 필요, 비용 발생).
//tasks.register('openaiTest', Test) {
//	group = 'verification'
//	description = 'Run @Tag("openai") smoke tests that hit the real OpenAI API (metered, manual).'
//	testClassesDirs = sourceSets.test.output.classesDirs
//	classpath = sourceSets.test.runtimeClasspath
//	useJUnitPlatform {
//		includeTags 'openai'
//	}
//	testLogging {
//		showStandardStreams = true
//	}
//}

// 실 Chromium 스모크만 온디맨드 실행: `./gradlew chromiumTest` (사전에 installChromium 필요).
tasks.register('chromiumTest', Test) {
	group = 'verification'
	description = 'Run heavy @Tag("chromium") tests that boot real headless Chromium (ADR-11).'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'chromium'
	}
}

// Playwright가 구동하는 Chromium 바이너리 사전 설치(~수백MB, 네트워크 필요). 첫 launch 시 자동 다운로드도 되지만 명시 설치 경로 제공.
tasks.register('installChromium', JavaExec) {
	group = 'playwright'
	description = 'Download the Chromium binary Playwright drives into ~/.cache/ms-playwright (ADR-11).'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.microsoft.playwright.CLI'
	args 'install', 'chromium'
}
